# radikari-ai

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  MQ_MESSAGE_FORMAT.md  README.md  diagnose_worker.py  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_case_insensitive_validation.py  test_chat_api.py  test_e2e_knowledge_chat.py  test_knowledge_service_pytest.py  test_mq_connectivity.py  test_mq_knowledge.py  test_mq_publisher.py  test_mq_validation.py  test_mq_with_null_filetype.py  test_no_filter.py  test_optional_filetype.py  test_streaming_chat.py  test_streaming_direct_chunks.py  test_streaming_performance.py
scripts/: batch_create_and_assign_users.py
src/: api.py  chat_service.py  debug_qdrant.py  image_processor.py  knowledge_service.py  models.py  mq_handler.py  mq_service.py  pdf_processor.py  spreadsheet_processor.py  vector_store.py
